<resources>
    <string name="app_name">Productivity Tracker</string>

    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="recommendations">Recommendations</string>
    <string name="timeline"><u>Your Timeline</u></string>
    <string name="close_button">Close button</string>
    <string name="account_settings">Account Information</string>
    <string name="user_name">User Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="log_out">Log Out</string>
    <string name="set_goals">SET GOALS</string>
    <string name="sleep_hours">Sleep Hours</string>
    <string name="work_study_hours">Work/ Study Hours</string>
    <string name="screen_time">Screen Time</string>
    <string name="workout_hours">Workout Hours</string>

    <string name="add_event">Add Event</string>
    <string name="eventName">Event Name</string>
    <string name="eventDescription">Event Description</string>
    <string name="eventType">Event Type : </string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>

    <string name="add_post">New Post</string>
    <string name="post_description">Post Description</string>
    <string name="post">Post</string>

    <string name="samplePostText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="sampleRecommendations">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="Comments"><u>2 comments</u></string>
    <string name="comment_hint">Add comment</string>
    <string name="sampleCommment">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>