<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddEventFragment"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_event"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:maxLines="1"
            android:hint="@string/eventName"
            android:fontFamily="@font/poppins"
            android:textColorHint="@color/gray"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/eventDescription"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:hint="@string/eventDescription"
            android:fontFamily="@font/poppins"
            android:maxLines="1"
            android:textColorHint="@color/gray"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                app:hintEnabled="false"
                app:endIconDrawable="@drawable/ic_baseline_access_time_24"
                android:backgroundTint="@color/white"
                app:endIconTint="@color/gray"
                app:endIconMode="custom"
                android:textColorHint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/startTime"
                    android:fontFamily="@font/poppins"
                    android:textColorHint="@color/gray"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/endTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hintEnabled="false"
                app:endIconDrawable="@drawable/ic_baseline_access_time_24"
                android:backgroundTint="@color/white"
                app:endIconTint="@color/gray"
                app:endIconMode="custom"
                android:textColorHint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/endTime"
                    android:fontFamily="@font/poppins"
                    android:textColorHint="@color/gray"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/saveEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:layout_gravity="end"/>

    </LinearLayout>

</FrameLayout>