<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddPostFragment"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_post"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="360dp"
            app:cardCornerRadius="8dp"
            android:backgroundTint="@color/light_gray">

            <EditText
                android:id="@+id/postDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="16dp"
                android:hint="@string/post_description"
                android:textColorHint="@color/gray"
                android:fontFamily="@font/poppins"
                android:background="@null"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/postButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/post"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:layout_gravity="end"/>

    </LinearLayout>

</FrameLayout>